  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" https://semver.org


-------------------------------------------------------------------------------
??/??/?? IAlibay, ianmkenney, PicoCentauri, pgbarletta, p-j-smith, 
         richardjgowers, lilyminium, ALescoulie, hmacdope, HeetVekariya

 * 2.7.0

Fixes
  * Fix documentation building errors due to `html_static_path` and unindented
    block of code (Issue #4362, PR #4365)
  * Updated cimport for numpy to maintain cimport consistency (Issue #3908)
  * Fix `NoJump` unwrapping for jumps on the second frame in a
    trajectory (PR #4258, Issue #4257)
  * Deprecated np.float_ and np.NaN aliases have been replaced with
    their original type value (np.float64 and np.nan) (PR #4272)
  * Fixes a case where qcprot.CalcRMSDRotationalMatrix would return a
    RMSD of None
  * Fixes hydrogenbonds tutorial path to point to hbonds (Issue #4285, PR #4286)
  * Fix atom charge reading in PDBQT parser (Issue #4282, PR #4283)

Enhancements
  * Document the usage of NoDataError in its docstring (Issue #3901, PR #4359)
  * Refactor c_distances backend to have a cython .pxd header and expose in
    libmdanalysis (Issue #4315, PR #4324)
  * Add faster nucleic acid Major and Minor pair distance calculators using
    AnalysisBase for updated nucleicacids module (Issue #3720, PR #3735)
  * Adds external sidebar links (Issue #4296)
  * Updated lib.qcprot.CalcRMSDRotationalMatrix to accept either float32 or float64
    inputs (PR #4273, part of #3927)
  * Added a warning about charge neutrality to the documentation of
    `DielectricConstant` (Issue #4262, PR #4263)
  * Add support for reading chainID info from prmtop amber topologies (PR #4007)
  * Add support for reading chainID info from GROMACS TPR topologies 
    (Issue #3994, PR #4281)  
  * Add support for reading chainID info from Autodock PDBQT files (Issue #4207,
    PR #4284)

Changes